--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </section>
         <section>
-            <img src="C:\Users\Victor\Downloads\maripic.jpg" alt="Descrição da Imagem">
+            <img src="maripic.jpg" alt="Descrição da Imagem">
         </section>
     </main>
     <footer>
